--- a/app/src/main/res/layout/activity_producto.xml
+++ b/app/src/main/res/layout/activity_producto.xml
@@ -9,12 +9,12 @@
 
     <TextView
         android:id="@+id/tvNomProd"
-        android:layout_width="343dp"
-        android:layout_height="42dp"
-        android:text="Nombre"
-        android:textSize="18sp"
-        android:textStyle="bold"
+        android:layout_width="315dp"
+        android:layout_height="57dp"
         android:gravity="center"
+        android:text="Nombre"
+        android:textSize="24sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -23,25 +23,28 @@
 
     <ImageView
         android:id="@+id/ivImagenProd"
-        android:layout_width="346dp"
-        android:layout_height="173dp"
+        android:layout_width="305dp"
+        android:layout_height="145dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.492"
+        app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvNomProd"
-        app:layout_constraintVertical_bias="0.034" />
+        app:layout_constraintVertical_bias="0.04" />
 
     <TextView
         android:id="@+id/tvDesc"
-        android:layout_width="374dp"
-        android:layout_height="356dp"
+        android:layout_width="316dp"
+        android:layout_height="234dp"
+        android:layout_marginTop="24dp"
+
+        android:layout_marginBottom="8dp"
+
+        android:scrollbars="vertical"
         android:text="Descripcion"
-
-        android:scrollbars = "vertical"
-
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ivImagenProd" />
+        app:layout_constraintTop_toBottomOf="@+id/ivImagenProd"
+        app:layout_constraintVertical_bias="0.468" />
 </androidx.constraintlayout.widget.ConstraintLayout>
